# lsm6dsr-rpi4-example

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cc
